<resources>
    <string name="app_name">SPI Mixer VR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_no_additional_data">No hay información complementaria</string>
    <string name="usuario">Usuario</string>
    <string name="usuarios">Usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">Administrador</string>
    <string name="tv_no_user_list">No hay usuarios cargados</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="borrar_usuario">Borrar usuario</string>
    <string name="msg_delete_user_dialog">¿Desea borrar al usuario %s?</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="ph_role_ref">Role</string>
    <string name="actualizar_usuario">Actualizar usuario</string>
    <string name="err_msg_user_name">Debe ingresar un nombre de usuario</string>
    <string name="ph_user_mail">E-mail</string>
    <string name="ph_user_password">Contraseña</string>
    <string name="mixer">Mixer</string>
    <string name="mixers">Mixers</string>
    <string name="actualizar_mixer">Actualizar Mixer</string>
    <string name="editar_mixer">Editar Mixer</string>
    <string name="agregar_tablet">Agregar Tablet</string>
    <string name="err_msg_tablet_name">El nombre de la Tablet es obligatorio</string>
    <string name="borrar_mixer">Borrar Mixer</string>
    <string name="configurar_tablet">Configurar Tablet</string>
    <string name="detalle_de_tablet">Detalle de la Tablet</string>
    <string name="nueva_tablet">Nueva tablet</string>
    <string name="tablet_libre">Tablet Libre</string>
    <string name="msg_delete_tablet_dialog">¿Está seguro que quiere borrar la tablet %1$s?</string>
    <string name="tv_no_tablet_list">No hay tablets cargadas</string>
    <string name="ph_mac">Mac address</string>
    <string name="ph_bt_box">BT Box</string>
    <string name="ph_calibration">Calibración</string>
    <string name="screen_tablet_config">Configuración de la tablet</string>
    <string name="tara">Tara</string>
    <string name="peso">Peso</string>
    <string name="capacidad_m3">Capacidad m3</string>
    <string name="modelo">Modelo</string>
    <string name="factor_conversion">Factor de conversion</string>
    <string name="divisiones_externas">Divisiones externas</string>
    <string name="divisiones_externas_2_p">"Divisiones externas: "</string>
    <string name="peso_conocido">Peso conocido</string>
    <string name="caja_bluetooth_asoc">Caja bluetooth asociada</string>
    <string name="tablets_vinculadas">Tablets vinculadas</string>
    <string name="buscar_tablets">Buscar Tablets</string>
    <string name="ingrese_macaddress">Ingrese Macaddress</string>
    <string name="calibrar">Calibrar</string>
    <string name="calibracion">Calibrando</string>
    <string name="cargar_mixer_peso_conocido">Cargar mixer con peso conocido</string>
    <string name="presione_aceptar">Presione aceptar</string>
    <string name="vaciar_mixer">Vaciar mixer y luego presionar aceptar</string>
    <string name="calibracion_ok">Calibracion OK</string>
    <string name="calibracion_done">Calibración guardada</string>
    <string name="desea_guardar">¿Desea guardar?</string>
    <string name="calibracion_mal">No se puede calibrar</string>
    <string name="ingrese_peso_conocido">Ingrese un peso conocido</string>
    <string name="selecione_valor">Seleccione Valor</string>
    <string name="cargar_mixer_con">"Cargar mixer con un peso conocido"</string>
    <string name="productos">Productos</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="editar_producto">Editar producto</string>
    <string name="borrar_producto">Borrar producto</string>
    <string name="actualizar_producto">Actualizar producto</string>
    <string name="detalle_de_producto">Detalle de producto</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="producto_libre">Producto Libre</string>
    <string name="product_diet_count">%1$s productos</string>
    <string name="msg_delete_product_dialog">¿Está seguro que quiere borrar el producto %1$s?</string>
    <string name="err_msg_product_name">El nombre del producto es obligatorio</string>
    <string name="tv_no_product_list">No hay productos cargados</string>
    <string name="ph_product_specific_weight">Peso específico</string>
    <string name="dieta">Dieta</string>
    <string name="dietas">Dietas</string>
    <string name="actualizar_dieta">Actualizar dieta</string>
    <string name="editar_dieta">Editar dieta</string>
    <string name="agregar_dieta">Agregar dieta</string>
    <string name="dieta_libre">Dieta Libre</string>
    <string name="title_delete_diet">Eliminar dieta</string>
    <string name="detalle_de_dieta">Detalle de dieta</string>
    <string name="nueva_dieta">Nueva dieta</string>
    <string name="msg_delete_diet_dialog">¿Está seguro que quiere borrar la dieta %1$s?</string>
    <string name="tv_no_diet_list">No hay dietas cargadas</string>
    <string name="err_msg_diet_name">El nombre de la dieta es obligatorio</string>
    <string name="no_products">No hay productos asignados a la dieta</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="establecimientos">Establecimientos</string>
    <string name="lbl_establishment">Establecimiento:</string>
    <string name="lbl_update_establishment">Actualizar Establecimiento</string>
    <string name="editar_establecimiento">Editar establecimiento</string>
    <string name="title_add_establishment">Agregar establecimiento</string>
    <string name="buscar_establecimiento">Buscar establecimiento</string>
    <string name="borrar_establecimiento">Borrar establecimiento</string>
    <string name="establecimiento_libre">Establecimiento Libre</string>
    <string name="tv_no_establishment_list">No hay establecimientos cargados</string>
    <string name="msg_delete_establishment_dialog">¿Está seguro que quiere borrar el establecimiento %1$s?</string>
    <string name="tv_no_additional_data_establishment">No se han asignado corrales al establecimiento</string>
    <string name="tv_corral_title">Corrales del establecimiento</string>
    <string name="alert_msg_no_establishment_sync_all">No hay establecimientos cargados. No se pueden sincronizar los corrales.</string>
    <string name="detalle_de_establecimiento">Detalle de establecimiento</string>
    <string name="nuevo_establecimiento">Nuevo establecimiento</string>
    <string name="err_msg_establishment_name">El nombre de establecimiento es obligatorio</string>
    <string name="corral">Corral</string>
    <string name="corrales">Corrales</string>
    <string name="agregar_corral">Agregar corral</string>
    <string name="editar_corral">Editar corral</string>
    <string name="borrar_corral">Borrar corral</string>
    <string name="actualizar_corral">Actualizar corral</string>
    <string name="detalle_de_corral">Detalle del corral</string>
    <string name="corral_round_count">%1$s corrales</string>
    <string name="corral_libre">Corral Libre</string>
    <string name="nuevo_corral">Nuevo corral</string>
    <string name="tv_no_corral_list">No hay corrales cargados</string>
    <string name="err_msg_corral_name">El nombre del corral es obligatorio</string>
    <string name="msg_delete_corral_dialog">¿Está seguro que quiere borrar el corral %1$s?</string>
    <string name="corral_establishment_count">%1$s corrales</string>
    <string name="no_corrals">Sin corrales</string>
    <string name="lbl_animal_quantity">Cantidad de animales:</string>
    <string name="ph_animal_quantity">Cantidad de animales</string>
    <string name="tv_no_additional_data_corral">No hay información adicional para este corral</string>
    <string name="alert_msg_no_establishment_sync">No se pudo sincronizar el corral porque falta el establecimiento asociado</string>
    <string name="no_establishment">No se pueden crear corrales porque no existen establecimientos</string>
    <string name="ronda">Ronda</string>
    <string name="rondas">Rondas</string>
    <string name="tv_no_round_list">No hay rondas cargadas</string>
    <string name="agregar_ronda">Agregar ronda</string>
    <string name="borrar_ronda">Borrar ronda</string>
    <string name="editar_ronda">Editar ronda</string>
    <string name="ronda_libre">Ronda Libre</string>
    <string name="detalle_de_ronda">Detalle de ronda</string>
    <string name="err_msg_round_name">El título de la ronda es obligatorio</string>
    <string name="msg_delete_round_dialog">¿Está seguro que quiere borrar la ronda %1$s?</string>
    <string name="msg_hide_round_dialog">¿Está seguro que quiere ocultar la ronda %1$s?</string>
    <string name="role_admin">Administrador</string>
    <string name="role_operator">Operario</string>
    <string name="role_supervisor">Supervisor</string>
    <string name="role_superadmin">Super Administrador</string>
    <string name="role_nutritionist">Nutricionista</string>
    <string name="role_api">API</string>
    <string name="descripcion">Descripción</string>
    <string name="editar">Editar</string>
    <string name="nuevo">Nuevo</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="cero">0</string>
    <string name="mezclar">Mezclar</string>
    <string name="mezclando">Mezclando</string>
    <string name="configuracion">Configuración</string>
    <string name="menu_admin">Administración</string>
    <string name="opciones">Opciones</string>
    <string name="lbl_camera">Cámara</string>
    <string name="lbl_gallery">Galería</string>
    <string name="seleccione_opcion">Seleccione una opción</string>
    <string name="more_contentDescription">Acciones posibles</string>
    <string name="lbl_yes">Sí</string>
    <string name="lbl_no">No</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Buscar...</string>
    <string name="lbl_specific_weight">Peso específico:</string>
    <string name="lbl_empty">No informado</string>
    <string name="lb_weight_unit">kg/m3</string>
    <string name="lb_weight_unit_kg">kg</string>
    <string name="lb_percentage_symbol">%</string>
    <string name="ph_product_rfid">RF ID</string>
    <string name="lbl_rfid">RfId:</string>
    <string name="percentage">Porcentaje</string>
    <string name="sync_intro">La sincronización puede demorar algunos minutos.</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="sync_con_servidor">Servidor</string>
    <string name="sync_con_tablet">Tablet</string>
    <string name="cantidad_animales">Cantidad de animales</string>
    <string name="kg_por_animal">kg por animal</string>
    <string name="borrar_base">Borrar BD</string>
    <string name="borrar_historial">Borrar reportes</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="reenviar_todo">Reenviar todo</string>
    <string name="no_hay_conexi_n_de_internet">No hay conexión de internet</string>
    <string name="revise_su_conexi_n_y_vuelva_a_intentar_nuevamente">Revise su conexión y vuelva a intentar nuevamente</string>
    <string name="reintentar">Reintentar</string>
    <string name="_0_percent">0%</string>
    <string name="tablets">Tablets</string>
    <string name="privacy_policy">Politica de privacidad</string>
    <string name="delete_account">Solicitar borrado de datos</string>
</resources>