<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/cancel_round"
        android:icon="@drawable/ic_cancel_round"
        android:iconTint="@color/white"
        android:title=""
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/privacy_tip_48px"
        android:title="@string/privacy_policy"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/delete_account"
        android:icon="@drawable/ic_delete_account"
        android:title="@string/delete_account"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:visible="false"
        />

    <item android:id="@+id/bluetooth_balance"
        android:title=""
        android:icon="@drawable/ic_balance_disconnected_48px"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/bluetooth_remote_status"
        android:icon="@drawable/ic_bluetooth_disconnected"
        android:title="@string/bluetooth"
        app:showAsAction="ifRoom"
        android:visible="true"
        />

    <item
        android:id="@+id/menu_selected_remote_tablet"
        android:icon="@drawable/ic_tablet_disconnected_48px"
        android:title="    Mixer"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/step_immage"
        android:title="                                          "
        app:showAsAction="always"
        android:orderInCategory="102"
        />
</menu>