<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SyncFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/ll_sync_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            >

            <!-- Toggle Servidor / Tablet -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_10sdp">

                <Button
                    android:id="@+id/btn_mode_server"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:text="@string/sync_con_servidor"
                    android:textSize="16sp"
                    android:background="@drawable/btn_rounded_green"
                    app:backgroundTint="@color/color_medium_green" />

                <Button
                    android:id="@+id/btn_mode_tablet"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:text="@string/sync_con_tablet"
                    android:textSize="16sp"
                    android:background="@drawable/btn_rounded_green"
                    app:backgroundTint="@color/gray_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:background="@drawable/border_sync"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/usuarios"
                    android:textColor="@color/color_deep_green"
                    />

                <ProgressBar
                    android:id="@+id/pb_users"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.55"
                    android:layout_gravity="center_vertical"
                    android:max="100"
                    android:progressBackgroundTint="@color/gray_light"
                    android:progressTint="@color/color_acent_green"
                    android:layout_height="wrap_content"
                    android:progress="0"
                    />

                <TextView
                    android:id="@+id/tv_users_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.13"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_0_percent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:background="@drawable/border_sync"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tablets"
                    android:textColor="@color/color_deep_green"
                    />

                <ProgressBar
                    android:id="@+id/pb_tablet"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.55"
                    android:layout_gravity="center_vertical"
                    android:max="100"
                    android:progressBackgroundTint="@color/gray_light"
                    android:progressTint="@color/color_acent_green"
                    android:layout_height="wrap_content"
                    android:progress="0"
                    />

                <TextView
                    android:id="@+id/tv_tablet_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.13"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_0_percent"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rounds"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:background="@drawable/border_sync"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/rondas"
                    android:textColor="@color/color_deep_green"
                    />

                <ProgressBar
                    android:id="@+id/pb_rounds"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.55"
                    android:layout_gravity="center_vertical"
                    android:max="100"
                    android:progressBackgroundTint="@color/gray_light"
                    android:progressTint="@color/color_acent_green"
                    android:layout_height="wrap_content"
                    android:progress="0"
                    />

                <TextView
                    android:id="@+id/tv_rounds_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.13"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_0_percent"
                    />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <Button
                    android:id="@+id/btn_drop"
                    android:layout_width="203dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_green"
                    android:text="@string/borrar_base"
                    android:textSize="15sp"
                    android:visibility="invisible"
                    app:backgroundTint="@color/color_full_red"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_history_delete"
                    android:layout_width="203dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_green"
                    android:text="@string/borrar_historial"
                    android:textSize="15sp"
                    android:visibility="invisible"
                    app:backgroundTint="@color/color_full_red"
                    app:layout_constraintStart_toEndOf="@id/btn_drop"
                    app:layout_constraintEnd_toStartOf="@id/btn_upload"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="203dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_green"
                    android:text="@string/reenviar_todo"
                    android:visibility="gone"
                    android:textSize="15sp"
                    app:backgroundTint="@color/color_medium_green"
                    app:layout_constraintStart_toEndOf="@id/btn_history_delete"
                    app:layout_constraintEnd_toStartOf="@id/btn_sync"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_green"
                    android:text="@string/sincronizar"
                    android:textSize="15sp"
                    app:backgroundTint="@color/color_medium_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="end"
                    android:text="@string/sync_intro"
                    android:textColor="@color/color_medium_grey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/btn_sync"
                    app:layout_constraintTop_toBottomOf="@id/btn_sync" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_sync_no_internet"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/no_hay_conexi_n_de_internet"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="italic"
            android:text="@string/revise_su_conexi_n_y_vuelva_a_intentar_nuevamente"
            >

        </TextView>

        <Button
            android:id="@+id/btn_retry"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reintentar"
            android:textAlignment="center"
            >

        </Button>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_home"
        android:backgroundTint="@color/green_500_dark"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:focusable="false"
        android:clickable="true"/>

</FrameLayout>