<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_2sdp">

    <TextView
        android:id="@+id/tv_corral_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_corral_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre del producto"
                android:textStyle="bold"
                android:textSize="@dimen/_8sdp"
                />

            <ImageView
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_cow"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/gray_primary">

            </ImageView>

            <TextView
                android:id="@+id/tv_corral_animal_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="normal"
                android:textSize="@dimen/_5sdp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_corral_description"
            android:text="Descripcion del producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_4sdp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_animal_quantity"
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:padding="@dimen/_1sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <EditText
            android:id="@+id/et_animal_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:hint="@string/cantidad_animales" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_food_by_animals"
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        app:suffixText="@string/lb_weight_unit_kg"
        android:padding="@dimen/_1sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <EditText
            android:id="@+id/et_food_by_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/kg_por_animal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_weight_corral"
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        app:suffixText="@string/lb_weight_unit_kg"
        android:padding="@dimen/_1sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <EditText
            android:id="@+id/et_weight_corral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="50"
            android:imeOptions="actionDone"
            android:hint="@string/peso" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_percentage"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:padding="@dimen/_1sdp"
        android:layout_height="wrap_content"
        app:suffixText="@string/lb_percentage_symbol"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <EditText
            android:id="@+id/et_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/percentage" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>